# agentic-retrieval

./: .gitignore  Dockerfile.inference  GRPO_README.md  README.md  find_mismatches.py  install_cu129py312.sh  pyproject.toml  retrieval_agent_spec-3.md
agent/: episode.py  harness.py  model_client.py  opensearch_neighbours.py  parser.py  prompts.py  schemas.py  service.py
artifacts/random_walk_regular/: config.json  metrics.jsonl
configs/: agent_loop_registry.yaml  ckr.yaml  ckr_gemma.yaml  ckr_giga.yaml  ckr_per_doc_filtered.yaml  ckr_per_doc_filtered_gemma.yaml  default.yaml  grpo_qwen3_14b.yaml  gspo_qwen3_moe.yaml  gspo_qwen3_moe_lr_kl.yaml  gspo_qwen3_moe_v0_raw.yaml  ift_inference.yaml  inference.yaml  musique.yaml  musique_dialogs.yaml  sbol.yaml  unioned.yaml  unioned_bge_m3_embedder.yaml
data/: readme.md
docker/: README.md  entrypoint.inference.sh
eval_/: baseline.py  build_eval.py  build_train.py  ckr_ids.py  export_grpo_val.py  metrics.py  run_ckr_eval.py  run_eval.py  run_one.py  run_service_eval.py
grpo/: __init__.py  agent_loop.py  build_union_data.py  data_prep.py  filter_easy_musique.py  filter_groups_metrics.py  filter_groups_trainer.py  reward.py  ti_to_check.py  tool_penalty.py
indexing/: build_index.py  compose_ckr_index.py  compose_ckr_train.py  compose_rnd_retrieval.py  compose_sbol_train.py  embedder_batch.py  merge_indexes.py  parse_musique.py  parse_sbol.py  sample_musique_dialogs.py
prune/: README.md  __init__.py  apply.py  collect_stats.py  common.py  plan.py  remap.py  select.py  validate.py
quantize/: README.md  __init__.py  build_calib_questions.py  calibration.py  quantize.py  vllm_config.py
scripts/: DEMO.ipynb  DEMO_agentic_retrieval.ipynb  analyze_trajectory_jsonl.py  bench_reranker.py  build_all.sh  build_grpo_data.sh  build_qwen_indexes.sh  build_sbol.sh  build_sbol_train.sh  build_union_grpo.sh  build_union_index.sh  dist_ckpt_to_hf.py  dist_ckpt_to_hf.sh  export_ckr_eval.sh  fetch_gemma_chat_template.sh  filter_easy_musique.sh  main_ppo.py  model_merger.py  model_merger.sh  prune_experts.sh  quantize_w8a16.sh  quantize_w8a8.sh  run_ckr_eval.sh  run_eval.sh  run_one.sh  serve_agent.sh  serve_reranker.sh  serve_tool.sh  serve_vllm.sh  serve_vllm_gemma.sh  serve_vllm_int8.sh  train_grpo.sh  train_gspo.sh  union_index_cross_check.py  upload_to_lakefs_weights.py
tests/: test_ckr_ids.py  test_episode.py  test_expert_pruning.py  test_harness_episode.py  test_opensearch_neighbours.py
tool_server/: embedder.py  index.py  main.py  reranker.py  schemas.py
trajectories/: checker.py  writer.py
