[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "retrieval-agent"
version = "0.1.0"
description = "SID-1-like retrieval agent over MuSiQue. MVP."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.5",
    "numpy>=1.26",
    "faiss-cpu>=1.7.4",
    "sentence-transformers>=2.7",
    "torch>=2.1,<2.6",  # >=2.6 requires CUDA driver newer than 12.3; install via cu121 wheel
    "transformers>=4.40",
    "openai>=1.30",
    "httpx>=0.27",
    "PyYAML>=6.0",
    "tqdm>=4.66",
    "scikit-learn>=1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.4",
]
gpu = [
    # Replace faiss-cpu with faiss-gpu manually if you set index.use_gpu: true.
    # faiss-gpu is not available on PyPI; install via conda or build from source.
]
serve = [
    "vllm>=0.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agent*", "tool_server*", "indexing*", "eval_*", "trajectories*"]
exclude = ["data*", "index*", "trajectories_data*"]

[tool.ruff]
line-length = 100
target-version = "py311"
