[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "retrieval-agent"
version = "0.1.0"
description = "SID-1-like retrieval agent over MuSiQue. MVP."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.5",
    "numpy>=1.26",
    "faiss-cpu>=1.7.4",
    "sentence-transformers>=2.7",
    "torch==2.8.0",  # >=2.6 requires CUDA driver newer than 12.3; install via cu121 wheel # 2.8.3 later >=2.1,<2.6
    "torchvision==0.23.0",
    "torchaudio==2.8.0",
    "transformers>=4.55,<5.0",  # vLLM 0.11.0 / verl rely on the 4.x tokenizer API (all_special_tokens_extended)
    "openai>=1.30",
    "httpx>=0.27",
    "PyYAML>=6.0",
    "tqdm>=4.66",
    "scikit-learn>=1.4",
    "verl==0.7.1",
    "pyarrow>=14",
    "pandas>=2.1",
    "vllm==0.11.0", # 0.10.2
    "xformers==0.0.32.post1",
    # verl's monkey_patch.py imports `AutoModelForCausalLMWithValueHead` from
    # trl during FSDP setup. Pin a recent version that still ships this class
    # so we don't silently fall back to a stale ~/.local install.
    "trl>=0.9.6,<0.20",
]
# ?? accelerate, flash-attn version
# downgrade transformers and breaking 

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.4",
]
gpu = [
    # Replace faiss-cpu with faiss-gpu manually if you set index.use_gpu: true.
    # faiss-gpu is not available on PyPI; install via conda or build from source.
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agent*", "tool_server*", "indexing*", "eval_*", "trajectories*", "grpo*"]
exclude = ["data*", "index*", "trajectories_data*"]

[tool.ruff]
line-length = 100
target-version = "py311"
